--- a/styles/index.css
+++ b/styles/index.css
@@ -6,17 +6,16 @@ nav {
   margin-top: 20px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
 ul {
- display: flex;
- list-style-type: none;
- width: 350px;
- height: 28px;
- justify-content: space-between;
- margin-left: 0;
- font-style: normal;
+  display: flex;
+  list-style-type: none;
+  width: 350px;
+  height: 28px;
+  justify-content: space-between;
+  margin-left: 0;
+  font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 28px;
@@ -30,7 +29,7 @@ ul {
 }
 
 .btn-section {
-  margin: 15px 269px 17px 29px;
+  margin: 15px 269px 17px 49px;
 }
 
 .btn {
@@ -56,8 +55,17 @@ ul {
 }
 
 header {
-  display: block;
+  display: flex;
+  margin: 113px 3px 243px 145px;
+  width: 100%;
 }
+
+
+.header__text__section {
+  display: flex;
+  flex-direction: column;
+}
+
 
 h1 {
   width: 518px;
@@ -108,18 +116,21 @@ p {
   height: 13;
 }
 
+.image__section {
+  position: relative;
+}
+
 .header__image {
   width: 605px;
   height: 496px;
-  justify-content: flex-end;
-  margin-top: 30px;
+  position: absolute;
 }
 
 .tool__section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  width: 1100px;
 }
 
 .icon__section {
@@ -136,10 +147,15 @@ p {
   height: 50px;
 }
 
-.validation__section {
+.main__info__section {
+  display: flex;
+  margin: 113px 3px 104px 145px;
+  width: 100%;
+}
+
+.main__text__section {
   display: flex;
   flex-direction: column;
-  
 }
 
 .heading {
@@ -177,7 +193,8 @@ h4 {
 }
 
 .text--info {
-  margin-top: 22px;
+  height: auto;
+  margin: 0;
   width: 486px;
 }
 
@@ -190,21 +207,47 @@ h4 {
 
 .heading--two {
   display: flex;
+  margin: 0;
+  height:auto;
 }
 
 .img__pointing {
   width: 520px;
   height: 574px;
+  margin-left: 104px;
+}
+
+.main__text__section--two {
+  margin-top: 50px;
 }
 
 .img__computer {
   width: 521px;
   height: 535px;
+  margin-right: 102px;
+  margin-left: 0px;
+}
+
+.icon__list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 30px;
 }
 
 .img__icon {
   width: 35px;
   height: 35px;
+  margin-right: 30px;
+}
+
+.text--icon {
+  width: 390px;
+}
+
+.image__pointing__man {
+  width: 542px;
+  height: 609px;
 }
 
 footer {
@@ -226,6 +269,11 @@ footer {
   display: flex;
   flex-direction: column;
   margin-left: 26px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 35px;
+  color: #544837;
 }
 
 .btn--signupnow {
