--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 * {
   font-family: 'Poppins', sans-serif;
+  margin: 0;
 }
 
 nav {
@@ -29,7 +30,7 @@ ul {
 }
 
 .btn-section {
-  margin: 15px 269px 17px 49px;
+  margin: 15px 30px 17px 49px;
 }
 
 .btn {
@@ -60,12 +61,10 @@ header {
   width: 100%;
 }
 
-
 .header__text__section {
   display: flex;
   flex-direction: column;
 }
-
 
 h1 {
   width: 518px;
@@ -75,6 +74,7 @@ h1 {
   font-size: 44px;
   line-height: 54px;
   color: #2F281E;
+  margin-bottom: 30px;
 }
 
 p {
@@ -85,6 +85,7 @@ p {
   font-size: 18px;
   line-height: 28px;
   color: #544837;
+  margin-bottom: 45px;
 }
 
 .header__btn__section {
@@ -131,6 +132,11 @@ p {
   flex-direction: column;
   align-items: center;
   width: 1100px;
+  margin-left: 150px;
+}
+
+.tool__div {
+  margin-right: 44px;
 }
 
 .icon__section {
@@ -138,6 +144,7 @@ p {
   flex-direction: row;
   width: 1095px;
   height: 204px;
+  margin-top: 54px;
   margin-bottom: 34px;
   justify-content: center;
 }
@@ -190,6 +197,7 @@ h4 {
 .text--under {
   max-width: 486px;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .text--info {
@@ -199,16 +207,18 @@ h4 {
 }
 
 .text--heading {
+  display: flex;
+  align-items: flex-end;
   font-weight: 700;
-  margin-top: 30px;
   margin-bottom: 12px;
   width: 486px;
 }
 
 .heading--two {
   display: flex;
-  margin: 0;
+  margin-left: 0;
   height:auto;
+  margin-bottom: 22px;
 }
 
 .img__pointing {
@@ -228,21 +238,28 @@ h4 {
   margin-left: 0px;
 }
 
+.icon__list__section {
+  display: flex;
+  flex-direction: column;
+}
+
 .icon__list {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  margin-top: 30px;
+  flex-direction: row;
+  margin-top: 40px;
 }
 
 .img__icon {
   width: 35px;
   height: 35px;
   margin-right: 30px;
+  align-items: center;
 }
 
 .text--icon {
   width: 390px;
+  margin-bottom: 5px;
 }
 
 .image__pointing__man {
@@ -252,7 +269,11 @@ h4 {
 
 footer {
   display: flex;
-  align-items: center;
+  width: 1109px;
+  height: 308px;
+  margin: 146px 131px 83px 160px;
+  margin-bottom: 100px;
+
 }
 
 .logo__two {
@@ -263,17 +284,36 @@ footer {
 .list__div {
   display: flex;
   margin-left: 126px;
+  margin-top: 60px;
 }
 
 .list {
   display: flex;
   flex-direction: column;
-  margin-left: 26px;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 35px;
   color: #544837;
+  width: 150px;
+  margin-right: 50px;
+}
+
+.list--right {
+  margin-right: 80px;
+}
+
+.input__div {
+  display: flex;
+  margin-top: 72px;
+  flex-direction: column;
+}
+
+input {
+  width: 325px;
+  height: 48px;
+  border: 2px solid #BCD0E5;
+  margin-bottom: 21px;
 }
 
 .btn--signupnow {
@@ -282,16 +322,4 @@ footer {
   background-color: #FF9900;
   color: #ffffff;
   border: none;
-}
-
-.input__div {
-  display: flex;
-  flex-direction: column;
-}
-
-input {
-  width: 325px;
-  height: 48px;
-  border: 2px solid #BCD0E5;
-  margin: 340px 131px 21px 82px;
 }
